--- a/package.json
+++ b/package.json
@@ -9,22 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.28.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@formkit/auto-animate": "^0.8.1",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.9",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
+    "cors": "^2.8.5",
+    "framer-motion": "^11.1.7",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.24.7",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.2",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
-    "tailwindcss-debug-screens": "^2.2.1"
+    "tailwindcss-debug-screens": "^2.2.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -35,6 +51,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "Host": {
+    "CORS": "*"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "postcss.config.js",
