--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_API_URL=http://89.116.134.204:8011
-NEXTAUTH_SECRET= 'jwtyoioiya'
+NEXTAUTH_SECRET= '  jose newkey -s 512 -t oct -a HS512'
