--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@formkit/auto-animate": "^0.8.1",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/material": "^5.15.9",
     "@next-auth/prisma-adapter": "^1.0.7",
     "axios": "^1.6.8",
@@ -22,7 +23,7 @@
     "cors": "^2.8.5",
     "framer-motion": "^11.1.7",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "query-string": "^9.0.0",
     "react": "^18",
@@ -32,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.2",
+    "react-modal": "^3.16.1",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss-debug-screens": "^2.2.1",
@@ -44,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
