--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://89.116.134.204:8011
+NEXT_PUBLIC_API_URL=https://api.sinarlestarielektronik.com
 NEXTAUTH_SECRET= 'secret'
