--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^4.24.7",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-currency-input-field": "^3.8.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
